Update JDK 25 - build kotlin-service, build quarkus-service